Added report handlers and deleted unnecessary things
